group 'net.placeholder'
version '-1'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

task run(type: JavaExec) {
    classpath sourceSets.main.runtimeClasspath
    main = "net.placeholder.Main"
    args "arg1", "arg2"
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

test {
    dependsOn 'cleanTest'

    // set a system property for the test JVM(s)
    //systemProperty 'some.prop', 'value'

    // explicitly include or exclude tests
    include 'net/placeholder/**'
    include 'net/placeholder/**'
    //exclude 'org/boo/**'

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }

    // listen to standard out and standard error of the test JVM(s)
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
    }
}